--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,32 @@
+body {
+    background-color: rgb(20, 146, 188);
+}
 
-/* 
+input {
+    width: 100%;
+    border: none;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+input:focus {
+    outline: none;
+}
 
-*/
+ul {
+    list-style-type: none;
+    background-color: white;
+    padding: 0px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+li {
+    border: 1px solid lightgray;
+    padding: 5px 20px 5px 20px;
+}
+
+li i {
+    visibility: hidden;
+}
+
+li:hover i {
+    visibility: visible;
+}
